<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_video_placeholder" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient_overlay" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/grid_margin">

        <ImageView
            android:id="@+id/successIcon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_success"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/thankYouTitle"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/thankYouTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thank_you_title"
            android:textSize="@dimen/text_h1"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/spacing_xlarge"
            app:layout_constraintTop_toBottomOf="@id/successIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/thankYouMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thank_you_message"
            android:textSize="@dimen/text_body"
            android:textColor="@color/white_70"
            android:gravity="center"
            android:layout_marginTop="@dimen/spacing_medium"
            app:layout_constraintTop_toBottomOf="@id/thankYouTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/buttonsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/spacing_xlarge"
            app:layout_constraintTop_toBottomOf="@id/thankYouMessage">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/smsButton"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:text="@string/btn_send_sms"
                android:textColor="@color/white"
                app:icon="@drawable/ic_sms"
                app:iconGravity="textStart"
                app:iconTint="@color/white"
                app:backgroundTint="@color/brand_blue"
                app:cornerRadius="12dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/whatsappButton"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:text="@string/btn_send_whatsapp"
                android:textColor="@color/white"
                app:icon="@drawable/ic_whatsapp"
                app:iconGravity="textStart"
                app:iconTint="@color/white"
                app:backgroundTint="@color/success_green"
                app:cornerRadius="12dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/emailButton"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="@string/btn_email_quote"
                android:textColor="@color/white"
                app:icon="@drawable/ic_email"
                app:iconGravity="textStart"
                app:iconTint="@color/white"
                app:backgroundTint="@color/brand_orange"
                app:cornerRadius="12dp" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/backToHomeButton"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_back_to_home"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/spacing_large" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
